8301769: Generational ZGC: Indirect access barriers are never elided

Reviewed-by: eosterlund